--- a/assets/site.css
+++ b/assets/site.css
@@ -10,6 +10,20 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+h1 {
+  font-size: 200%;
+}
+h2 {
+  font-size: 160%;
+}
+
+a {
+  color: #005098;
+}
+a:hover {
+  color: #74aee2;
+}
+
 body {
   font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
   line-height: 1.5;
@@ -30,25 +44,14 @@ header h1 {
   font-size: 300%;
 }
 
-section, main {
+section {
   max-width: 720px;
   margin: 0 auto;
   padding: 0 1em;
   text-align: justify;
 }
-
-
-h1 {
-  text-align: left;
-  font-size: 200%;
-}
-h2 {
-  font-size: 160%;
-}
-
-a {
-  color: #005098;
-}
-a:hover {
-  color: #74aee2;
+main {
+  max-width: 720px;
+  margin: 0 auto;
+  padding: 0 1em;
 }
