--- a/personal/templates/gallery.html
+++ b/personal/templates/gallery.html
@@ -21,91 +21,39 @@
         <nav class="md:text-lg hidden md:block"></nav>
       </div>
     </header>
-    <main class="max-w-4xl my-10 mx-auto flex flex-row flex-wrap">
+    <main class="max-w-6xl my-10 mx-auto flex flex-row flex-wrap">
+      {% for asset in page.assets %} {% if asset is matching("[.](jpg|png)$") %}
+      {% set meta = get_image_metadata(path=asset) %}
+      <!-- <a href="{{ get_url(path=asset) }}">
+         {{(meta.width /
+        meta.height) }} {{(meta.width / meta.height) > 1.2 }} 00 -->
       <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2020-03-27.jpg"
+        class="
+          object-cover
+          flex-grow
+          max-h-96
+          {%
+          if
+          (meta.width
+          /
+          meta.height)
+          >
+          1.2
+          %}
+          md:w-1/3
+          {%
+          else
+          %}
+          md:w-1/4
+          {%
+          endif
+          %}
+        "
+        src="{{ resize_image(path=asset, width=900, height=900, op='fill')
+        }}"
       />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2020-04-10.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2020-04-25.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2020-05-23.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2020-06-13.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2020-07-19.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2020-09-19.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2020-12-05.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-01-01.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2021-01-23.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-02-07.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-02-28.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2021-03-26.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2021-04-16.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-04-23.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-04-30.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2021-05-21.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-05-28.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-06-11.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-2/3"
-        src="/gallery/2021-06-18.jpg"
-      />
-      <img
-        class="object-cover flex-grow max-h-96 md:w-1/3"
-        src="/gallery/2021-06-27.jpg"
-      />
+      <!-- </a> -->
+      {% endif %} {% endfor %}
     </main>
   </body>
 </html>
