--- a/personal/templates/gallery.html
+++ b/personal/templates/gallery.html
@@ -49,7 +49,7 @@
           endif
           %}
         "
-        src="{{ resize_image(path=asset, width=900, height=900, op='fill')
+        src="{{ resize_image(path=asset, width=900, height=900, op='fit')
         }}"
       />
       <!-- </a> -->
