--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -16,7 +16,7 @@
         <h1 class="mr-auto font-serif text-2xl md:text-5xl tracking-widest">
           Peter Saxton
         </h1>
-        <nav class="md:text-lg hidden md:block">
+        <nav class="md:text-lg">
           <a
             class="px-2 py-1 border-gray-300 hover:border-gray-600 border-b-2"
             href="/gallery"
