--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -1,37 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peter Saxton</title>
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body class="text-gray-600 px-4">
-    <header>
-      <div class="flex m-4 md:my-10 items-baseline">
-        <h1 class="mr-auto font-serif text-2xl md:text-5xl tracking-widest">
-          Peter Saxton
-        </h1>
-        <nav class="md:text-lg">
-          <a
-            class="px-2 py-1 border-gray-300 hover:border-gray-600 border-b-2"
-            href="/gallery"
-            >Gallery</a
-          >
-        </nav>
-      </div>
-      <img
-        class="h-96 object-cover w-full bg-gray-300"
-        src="./cover.jpg"
-        alt="sunset in Wales"
-      />
-    </header>
-    <main class="my-4 md:my-10 w-full max-w-5xl mx-auto">
-      {{section.content | safe}}
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Peter Saxton</title>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+</head>
+
+<body class="text-gray-600 px-4">
+  <header>
+    <div class="flex m-4 md:my-10 items-baseline">
+      <h1 class="mr-auto font-serif text-2xl md:text-5xl tracking-widest">
+        Peter Saxton
+      </h1>
+      <nav class="md:text-lg">
+        <a class="px-2 py-1 border-gray-300 hover:border-gray-600 border-b-2" href="/gallery">Gallery</a>
+      </nav>
+    </div>
+    <img class="h-96 object-cover w-full bg-gray-300" src="./cover.jpg" alt="sunset in Wales" />
+  </header>
+  <main class="my-4 md:my-10 w-full max-w-5xl mx-auto">
+    <div id="command">
+      Say "Hey Colin"
+    </div>
+    {{section.content | safe}}
+  </main>
+  <script>
+    $command = document.getElementById("command")
+
+    // var grammar = '#JSGF V1.0; grammar colors; public <color> = aqua | azure | beige | bisque | black | blue | brown | chocolate | coral | crimson | cyan | fuchsia | ghostwhite | gold | goldenrod | gray | green | indigo | ivory | khaki | lavender | lime | linen | magenta | maroon | moccasin | navy | olive | orange | orchid | peru | pink | plum | purple | red | salmon | sienna | silver | snow | tan | teal | thistle | tomato | turquoise | violet | white | yellow ;'
+    var recognition = new webkitSpeechRecognition();
+    // var speechRecognitionList = new webkitSpeechGrammarList();
+    // speechRecognitionList.addFromString(grammar, 1);
+    // recognition.grammars = speechRecognitionList;
+    // We need to restart all the time end fires frequently. so do continous false and restart
+    recognition.continuous = false;
+    recognition.lang = 'en-US';
+    recognition.interimResults = true;
+    recognition.maxAlternatives = 3;
+
+    // recognition.onaudiostart = (x) => console.log(x, "onaudiostart")
+    // recognition.onsoundstart = (x) => console.log(x, "soundstart")
+    // recognition.onstart = (x) => console.log(x, "onstart")
+    recognition.onend = (x) => {
+      recognition.start()
+      console.log("continue waiting ...")
+    }
+
+
+
+    var triggered = false
+    // recognition.onnomatch = (x) => console.log(x, "onnomatch")
+    recognition.onerror = (x) => console.log(x, "onerror")
+    const listen = (x) => {
+      // console.log(x, "onresult")
+      // console.log(.map((x) => x.transcript))
+      for (const alternatives of x.results) {
+        for (const { transcript } of alternatives) {
+          if (transcript.toLowerCase().startsWith("hey colin") && triggered === false) {
+            triggered = true
+            $command.style.background = "#DDD";
+            // console.log("Triggered");
+            recognition.stop()
+            console.log("process")
+            recognition.onend = (x) => {
+              recognition.onresult = (x) => {
+                utterance = x.results[0][0].transcript
+                // console.log("other", utterance)
+                $command.innerText = utterance
+                if (utterance === "show gallery") {
+                  window.location.pathname = "/gallery"
+                }
+                if (x.results[0].isFinal) {
+                  // change order
+                  console.log("finished");
+                  recognition.stop()
+                  recognition.onend = (x) => {
+                    console.log("ended after finishing");
+                    triggered = false
+                    $command.style.background = "#FFF";
+
+                    recognition.onresult = listen
+                    recognition.onend = (x) => {
+                      recognition.start()
+                      console.log("continue waiting ...")
+                    }
+                    recognition.start()
+                    console.log("restarting");
+                  }
+                } else {
+                  return
+                }
+              }
+              recognition.start()
+            }
+            // setTimeout(() => {
+            //   command.start()
+            //   // triggered = false
+            //   // console.log("ready");
+            // }, 0);
+          }
+        }
+      }
+    }
+    recognition.onresult = listen
+
+
+    recognition.start()
+    console.log("started");
+
+    var command = new webkitSpeechRecognition();
+    // var speechRecognitionList = new webkitSpeechGrammarList();
+    // speechRecognitionList.addFromString(grammar, 1);
+    // command.grammars = speechRecognitionList;
+    // We need to restart all the time end fires frequently. so do continous false and restart
+    command.continuous = false;
+    command.lang = 'en-US';
+    command.interimResults = true;
+    command.maxAlternatives = 3;
+    command.onstart = (x) => console.log(x, "ready for command")
+    command.onend = (x) => console.log(x, "Ended")
+    command.onerror = (x) => console.log(x, "command onerror")
+
+
+    command.onresult = (x) => {
+      for (const alternatives of x.results) {
+        for (const { transcript } of alternatives) {
+          console.log(transcript)
+        }
+      }
+      console.log(x.isFinal)
+    }
+
+  </script>
+</body>
+
 </html>
