add scroll commands

--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -23,8 +23,7 @@
     <img class="h-96 object-cover w-full bg-gray-300" src="./cover.jpg" alt="sunset in Wales" />
   </header>
   <main class="my-4 md:my-10 w-full max-w-5xl mx-auto">
-    <div id="command">
-      Say "Hey Colin"
+    <div id="command" style="display: none;" class="h-2 bg-gradient-to-r from-blue-200 to-gray-800 rounded my-3">
     </div>
     {{section.content | safe}}
   </main>
