--- a/personal/templates/gallery.html
+++ b/personal/templates/gallery.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peter Saxton</title>
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body class="text-gray-600 px-4">
-    <header>
-      <div class="flex m-4 md:my-10 items-baseline">
-        <a class="pointer" href="/">
-          <h1 class="mr-auto font-serif text-2xl md:text-5xl tracking-widest">
-            Peter Saxton
-          </h1>
-        </a>
-        <nav class="md:text-lg hidden md:block"></nav>
-      </div>
-    </header>
-    <main class="max-w-6xl my-10 mx-auto flex flex-row flex-wrap">
-      <style>
-        label > input:checked + img {
-          position: fixed;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          object-fit: contain;
-          background: white;
-          padding: 0.25em;
-        }
-      </style>
-      {% for asset in page.assets %} {% if asset is matching("[.](jpg|png)$") %}
-      {% set meta = get_image_metadata(path=asset) %} {% set landscape =
-      (meta.width / meta.height) > 1.2%}
-      <label
-        class="
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Peter Saxton</title>
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet" />
+  <script src="/main.js" type="module"></script>
+</head>
+
+<body class="text-gray-600 px-4">
+  <header>
+    <div class="flex m-4 md:my-10 items-baseline">
+      <a class="pointer" href="/">
+        <h1 class="mr-auto font-serif text-2xl md:text-5xl tracking-widest">
+          Peter Saxton
+        </h1>
+      </a>
+      <nav class="md:text-lg hidden md:block"></nav>
+    </div>
+    <div id="command" style="display: none;"
+      class="max-w-6xl mx-auto h-2 bg-gradient-to-r from-blue-200 to-gray-800 rounded my-3">
+  </header>
+  <main class="max-w-6xl my-10 mx-auto flex flex-row flex-wrap">
+
+    <style>
+      label>input:checked+img {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        object-fit: contain;
+        background: white;
+        padding: 0.25em;
+      }
+    </style>
+    {% for asset in page.assets %} {% if asset is matching("[.](jpg|png)$") %}
+    {% set meta = get_image_metadata(path=asset) %} {% set landscape =
+    (meta.width / meta.height) > 1.2%}
+    <label class="
           flex-grow
           p-px
           {%
@@ -53,16 +55,13 @@
           {%
           endif
           %}
-        "
-      >
-        <input class="hidden" type="checkbox" name="focus" id="" />
-        <img
-          class="object-cover min-w-full min-h-full max-h-96 cursor-pointer"
-          src="{{ resize_image(path=asset, width=900, height=900, op='fit')
-              }}"
-        />
-      </label>
-      {% endif %} {% endfor %}
-    </main>
-  </body>
+        ">
+      <input class="hidden" type="checkbox" name="focus" id="" />
+      <img class="object-cover min-w-full min-h-full max-h-96 cursor-pointer" src="{{ resize_image(path=asset, width=900, height=900, op='fit')
+              }}" />
+    </label>
+    {% endif %} {% endfor %}
+  </main>
+</body>
+
 </html>
