--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -23,14 +23,25 @@
         <div id="command" style="display: none;"
             class="max-w-6xl mx-auto h-2 bg-gradient-to-r from-blue-200 to-gray-800 rounded my-3">
     </header>
-    <main class="max-w-6xl my-10 mx-auto flex flex-row flex-wrap">
-        <h1 class="text-xl py-2">Week 1</h1>
+    <main class="max-w-4xl my-10 mx-auto">
+        <div>
+            <h1 class="text-xl font-bold py-2">Week 2</h1>
 
-        <video controls>
-            <source src="/log/week_1.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-            <!-- Text to be shown incase browser doesnt support html5 -->
-        </video>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/664395181?h=3757b4eee1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="week 2"></iframe></div>
+            <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
+        </div>
+        <div>
+            <h1 class="text-xl font-bold py-2">Week 1</h1>
+
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/664401317?h=d1db1efd49&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 1"></iframe></div>
+            <script src="https://player.vimeo.com/api/player.js"></script>
+        </div>
     </main>
 </body>
 
