--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,17 +25,35 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 4</h1>
+            <ul class="list-inside list-disc">
+                <li>Cascading delete</li>
+                <li>Type providers</li>
+            </ul>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/669544844?h=ca8fd8273f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="week 4"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 2</h1>
-
+            <ul class="list-inside list-disc">
+                <li>Continuous testing</li>
+                <li>Case clauses</li>
+                <li>Typed holes</li>
+                <li>Tagged union types</li>
+                <li>Expandable unions</li>
+            </ul>
             <div style="padding:62.5% 0 0 0;position:relative;"><iframe
                     src="https://player.vimeo.com/video/664395181?h=3757b4eee1&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
                     frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
                     style="position:absolute;top:0;left:0;width:100%;height:100%;" title="week 2"></iframe></div>
-            <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
         </div>
         <div>
             <h1 class="text-xl font-bold py-2">Week 1</h1>
-
+            <ul class="list-inside list-disc">
+                <li>Structural Editor</li>
+                <li>Type check and execute on key stroke</li>
+                <li>Jump to error</li>
+            </ul>
             <div style="padding:62.5% 0 0 0;position:relative;"><iframe
                     src="https://player.vimeo.com/video/664401317?h=d1db1efd49&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
                     frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
