--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,14 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 8</h1>
+            <ul class="list-inside list-disc">
+                <li>Gleam 0.19.0</li>
+            </ul>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/680148812?h=028dfee1d6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 8"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 5</h1>
             <ul class="list-inside list-disc">
                 <li>Hole AST node</li>
