--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,11 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 18</h1>
+            <ul class="list-inside list-disc">
+                <li>Gleam bitstring pattern matching</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/705452942?h=9e07ff57ee&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 18"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 17</h1>
             <ul class="list-inside list-disc">
                 <li>Firmata in Gleam</li>
