--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 22</h1>
+            <ul class="list-inside list-disc">
+                <li>Hot code reloading</li>
+                <li>Type Providers</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/714953516?h=08fc336ea8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 22"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 21</h1>
             <ul class="list-inside list-disc">
                 <li>Apps/Mounts/Sandbox</li>
