--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -30,43 +30,64 @@
                 <li>String formatting with Type Providers</li>
                 <li>code reloading into UI app</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/719940601?h=303c21b66a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 24"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/719940601?h=303c21b66a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 24"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 22</h1>
             <ul class="list-inside list-disc">
                 <li>Hot code reloading</li>
                 <li>Type Providers</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/714953516?h=08fc336ea8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 22"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/714953516?h=08fc336ea8&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 22"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 21</h1>
             <ul class="list-inside list-disc">
                 <li>Apps/Mounts/Sandbox</li>
                 <li>Typed holes</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/713364024?h=4465c67355&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 21"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/713364024?h=4465c67355&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 21"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 20</h1>
             <ul class="list-inside list-disc">
                 <li>Copy and Paste</li>
                 <li>Record access</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/710451827?h=86611a9d40&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 20"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/710451827?h=86611a9d40&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 20"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 18</h1>
             <ul class="list-inside list-disc">
                 <li>Gleam bitstring pattern matching</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/705452942?h=9e07ff57ee&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 18"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/705452942?h=9e07ff57ee&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 18"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 17</h1>
             <ul class="list-inside list-disc">
                 <li>Firmata in Gleam</li>
                 <li>PLC scan cycle</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/702599036?h=55fb6e0da6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 17"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/702599036?h=55fb6e0da6&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 17"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 16</h1>
             <ul class="list-inside list-disc">
                 <li>Firmata Protocol</li>
                 <li>erlang binary patterns</li>
                 <li>Gleam pattern development</li>
             </ul>
-            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/700521403?h=8c0e14a0ba&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="video.webm"></iframe></div>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe
+                    src="https://player.vimeo.com/video/700521403?h=8c0e14a0ba&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;" title="video.webm"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 10</h1>
             <ul class="list-inside list-disc">
                 <li>Recursive Functions</li>
