--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 33</h1>
+            <ul class="list-inside list-disc">
+                <li>Pure actor system</li>
+                <li>Runtime monad</li>
+                <li>Effect types, maybe.</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/739722048?h=abf442405e&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 33"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 32</h1>
             <ul class="list-inside list-disc">
                 <li>Actors and pids</li>
