--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 38</h1>
+            <ul class="list-inside list-disc">
+                <li>Deployment platform</li>
+                <li>fly.io</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/752558869?h=8faef6db68&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 38"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 36</h1>
             <ul class="list-inside list-disc">
                 <li>Effect types "do" and "impl"</li>
