add the end of the year

--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,19 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">Week 51</h1>
+            <ul class="list-inside list-disc">
+                <li>Structural editor</li>
+                <li>First class case statements</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/782643147?h=1ed57d7332&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 51"></iframe></div>
+            <h1 class="text-xl font-bold py-2">Week 50</h1>
+            <ul class="list-inside list-disc">
+                <li>Algebraic Effects</li>
+                <li>Effect tracking and handling</li>
+                <li>Language design</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/780465787?h=c6bd076faa&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Week 50"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 46</h1>
             <ul class="list-inside list-disc">
                 <li>Algorithm W</li>
