--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,18 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">09/01/2023, Effect types</h1>
+            <ul class="list-inside list-disc">
+                <li>Effect handlers</li>
+                <li>Test framework</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/794219638?h=61d39dcf1b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="30/01/2023, Effect Handlers"></iframe></div>
+            <h1 class="text-xl font-bold py-2">09/01/2023, Effect types</h1>
+            <ul class="list-inside list-disc">
+                <li>Effect types</li>
+                <li>Effect tracking</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/787665908?h=4ee92bad9e&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="09/01/2023, Effect types"></iframe></div>
             <h1 class="text-xl font-bold py-2">Week 51</h1>
             <ul class="list-inside list-disc">
                 <li>Structural editor</li>
