add link to log

--- a/personal/templates/index.html
+++ b/personal/templates/index.html
@@ -19,6 +19,9 @@
       <nav class="md:text-lg">
         <a class="px-2 py-1 border-gray-300 hover:border-gray-600 border-b-2" href="/gallery">Gallery</a>
       </nav>
+      <nav class="md:text-lg">
+        <a class="px-2 py-1 border-gray-300 hover:border-gray-600 border-b-2" href="/log">Log</a>
+      </nav>
     </div>
     <img class="h-96 object-cover w-full bg-gray-300" src="./cover.jpg" alt="sunset in Wales" />
   </header>
