--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">13/03/2023, Async & Await Effects</h1>
+            <ul class="list-inside list-disc">
+                <li>Async Await Effects</li>
+                <li>HTTP Effect handlers</li>
+                <li>First class case statements</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/807640104?h=4dfdc49849&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="13/03/2023, Async & Await Effects"></iframe></div>
             <h1 class="text-xl font-bold py-2">06/03/2023, Universal Programs</h1>
             <ul class="list-inside list-disc">
                 <li>Universal Programs</li>
