up to date on the videos

--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,31 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">22/05/2023, Introducing Eyg</h1>
+            <ul class="list-inside list-disc">
+                <li>Embeddable editor</li>
+                <li>Functional language</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/829141501?h=683a16ef63&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="22/05/2023, Introducing Eyg"></iframe></div>
+            <h1 class="text-xl font-bold py-2">15/05/2023, structured editor in the terminal</h1>
+            <ul class="list-inside list-disc">
+                <li>Structural editor</li>
+                <li>TUI implemented in Go</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/827006232?h=59d1319301&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="15/05/2023, structured editor in the terminal"></iframe></div>
+            <h1 class="text-xl font-bold py-2">02/05/2023, Algorithm J &amp; first class match statements</h1>
+            <ul class="list-inside list-disc">
+                <li>Type inference</li>
+                <li>Algorithm J</li>
+                <li>First class match statements</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/823083943?h=48c2f59eec&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="02/05/2023, Algorithm J &amp; first class match statements"></iframe></div>
+            <h1 class="text-xl font-bold py-2">03/04/2023, Code in documentation</h1>
+            <ul class="list-inside list-disc">
+                <li>Function capture</li>
+                <li>AST serialization</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/814332459?h=bd37893396&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="03/04/2023, Code in documentation"></iframe></div>
             <h1 class="text-xl font-bold py-2">22/03/2023, multiline match statements</h1>
             <ul class="list-inside list-disc">
                 <li>Structural editor</li>
