--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,19 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">04/07/2023, adding eval and supercompilation</h1>
+            <ul class="list-inside list-disc">
+                <li>AST eval</li>
+                <li>Investigating supercompilation</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/842275363?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="04/07/2023, adding eval and supercompilation"></iframe></div>
+            <h1 class="text-xl font-bold py-2">27/06/2023, Apps, new effects &amp; Shallow effect handlers</h1>
+            <ul class="list-inside list-disc">
+                <li>Web apps in Eyg</li>
+                <li>HTTP and Async effects</li>
+                <li>Shallow effect handlers</li>
+            </ul>
+            <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/840125548?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="27/06/2023, Apps, new effects &amp; Shallow effect handlers"></iframe></div>
             <h1 class="text-xl font-bold py-2">19/06/2023, Explaining effect types with examples</h1>
             <ul class="list-inside list-disc">
                 <li>Effect types examples</li>
