add introducing video

--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,18 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1 class="text-xl font-bold py-2">25/07/2023, Explaining EYG a portable language with no syntax</h1>
+            <ul class="list-inside list-disc">
+                <li>Functional programming</li>
+                <li>Row types</li>
+                <li>Structural Editor</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/848449632?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="25/07/2023, Explaining EYG a portable language with no syntax"></iframe></div>
+            <h1 class="text-xl font-bold py-2">18/07/2023, JSON decoder</h1>
+            <ul class="list-inside list-disc">
+                <li>JSON decoder</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/846295379?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="18/07/2023, JSON decoder"></iframe></div>
             <h1 class="text-xl font-bold py-2">04/07/2023, adding eval and supercompilation</h1>
             <ul class="list-inside list-disc">
                 <li>AST eval</li>
