add go interpreter

--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,13 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>15/08/2023, Implementing a CEK interpreter in Go</h1>
+            <ul class="list-inside list-disc">
+                <li>CEK interpreter</li>
+                <li>Delimited Continuations</li>
+                <li>Go interpreter</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/854753610?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="15/08/2023, Implementing a CEK interpreter in Go"></iframe></div>
             <h1>31/07/2023, Datalog query over total program AST</h1>
             <ul class="list-inside list-disc">
                 <li>AST search</li>
