add deploy as continuations

--- a/personal/templates/log.html
+++ b/personal/templates/log.html
@@ -25,6 +25,12 @@
     </header>
     <main class="max-w-4xl my-10 mx-auto">
         <div>
+            <h1>11/09/2023, build and deploy as continuations</h1>
+            <ul class="list-inside list-disc">
+                <li>client server</li>
+                <li>build tools</li>
+            </ul>
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/863287985?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="11/09/2023, build and deploy as continuations"></iframe></div>
             <h1>04/09/2023, Lisp shell for deployments</h1>
             <ul class="list-inside list-disc">
                 <li>Lisp REPL</li>
